# progettoFCG_Minesweeper

./: .gitignore  CMakeLists.txt  README.md
Tappa_00/: 00_Tappa.md  00_hello.cpp  Tappa_00.md
Tappa_1a/: 1a_Tappa.md  1a_cell_starting_graphic.cpp  1a_cell_starting_texture.cpp  Tappa_1a.md
Tappa_1b/: 1b_Tappa.md  1b_interactive_cell.cpp  Tappa_1b.md
Tappa_1c/: 1c_victory_defeat_restart.cpp  Tappa_1c.md
Tappa_2a/: 2a_header.cpp  Tappa_2a.md
Tappa_2b/: 2b_intective_header.cpp  Tappa_2b.md
Tappa_3/: 3_border.cpp  Tappa_3.md
Tappa_4a/: 4a_graphic_control_panel.cpp  Tappa_4a.md
Tappa_4b/: 4b_interactive_control_panel.cpp  Tappa_4b.md
Tappa_5/: 5_start_panel.cpp  Tappa_5.md
Tappa_6/: 6_levels.cpp  Tappa_6.md
Tappa_7a/: 7a_graphic_exit.cpp  Tappa_7a.md
Tappa_7b/: 7b_interactive_exit.cpp  Tappa_7b.md
Tappa_8/: 8_rules_and_title.cpp  Tappa_8.md
risorse/: textures_fonts.hpp
